rm untrue assertion

--- a/packages/langsci-gb4e/langsci-gb4.tex
+++ b/packages/langsci-gb4e/langsci-gb4.tex
@@ -734,7 +734,7 @@ Jambox only works with interlinear examples if the aligned lines are enclosed in
 \section{What's removed}
 The original gb4e files had additional macros for adding bars on letters for early generative grammar, for arrows, and for greek letters. These solutions have become obsolete with the advent of Unicode and TikZ. These legacy commands are therefore removed from \texttt{langsci-gb4e}.
 
-Some versions of gb4e used the counter \texttt{equation} to be able to mix math formulae and lingustic examples, using the same numbering system for both. This is considered bad practice since you cannot be sure that the layout of these two environments will correspond. You might end up with example "(17)" followed by formula "3.18". This is maximally confusing and very difficult to debug once you run into it. If you want your math formulae with the same counters as linguistic examples, simply use \cmd{ea}...\cmd{z} around them. 
+% Some versions of gb4e used the counter \texttt{equation} to be able to mix math formulae and lingustic examples, using the same numbering system for both. This is considered bad practice since you cannot be sure that the layout of these two environments will correspond. You might end up with example "(17)" followed by formula "3.18". This is maximally confusing and very difficult to debug once you run into it. If you want your math formulae with the same counters as linguistic examples, simply use \cmd{ea}...\cmd{z} around them. 
 
 \section{Gotchas}
 \begin{enumerate}
