rm useless keywords

--- a/packages/langsci-gb4e/langsci-gb4.tex
+++ b/packages/langsci-gb4e/langsci-gb4.tex
@@ -13,7 +13,7 @@
 }[html]
 \lstset{ 
     alsoletter={\\}, 
-    morekeywords={\\ea, \\ex, \\exi, \\exr, \\exp, \\gll, \\glll, \\gllll, \\glt, \\ea, \\z, \\begin, \\end, \\\\, \\textsc, \\textit, \\textbf, \\SG, \\COP, \\PRS, \\IND, \\PTCP, \\F, \\jambox, \\jambox*,  \\settowidth, \\jamwidth, \\nogltOffset, \\resetgltOffset, exe, xlist, \\ex\\label, ex, :, original, ex:, firstmat, \\settowidth\\jamwidth, \\sn, \[\], \[*\]},    
+    morekeywords={\\ea, \\ex, \\exi, \\exr, \\exp, \\gll, \\glll, \\gllll, \\glt, \\ea, \\z, \\begin, \\end, \\\\, \\textsc, \\textit, \\textbf, \\SG, \\COP, \\PRS, \\IND, \\PTCP, \\F, \\jambox, \\jambox*,  \\settowidth, \\jamwidth, \\nogltOffset, \\resetgltOffset, exe, xlist, \\ex\\label, ex, :, original, ex:, firstmat, \\settowidth\\jamwidth, \\sn},    
     basicstyle=\fontfamily{pcr}\selectfont\footnotesize\color{black},
     keywordstyle=\color{blue}\bfseries, % style for keywords
     commentstyle=\color{green}\bfseries, % style for keywords
