--- a/packages/langsci-gb4e/langsci-gb4.tex
+++ b/packages/langsci-gb4e/langsci-gb4.tex
@@ -3,22 +3,22 @@
 \title{langsci-gb4e}
 \abstract{\vspace*{-2\baselineskip}}
 \usepackage{langsci-gb4e}
-\usepackage{langsci-lgr} 
+\usepackage{langsci-lgr}
 \usepackage{listings}
 \lstdefinelanguage{Ini}
-{  
+{
   tag=[s]{[]},
   tagstyle=\color{blue}\bfseries,
   usekeywordsintag=true
 }[html]
-\lstset{ 
-    alsoletter={\\}, 
-    morekeywords={\\ea, \\ex, \\exi, \\exr, \\exp, \\gll, \\glll, \\gllll, \\glt, \\ea, \\z, \\begin, \\end, \\\\, \\textsc, \\textit, \\textbf, \\SG, \\COP, \\PRS, \\IND, \\PTCP, \\F, \\jambox, \\jambox*,  \\settowidth, \\jamwidth, \\nogltOffset, \\resetgltOffset, exe, xlist, \\ex\\label, ex, :, original, ex:, firstmat, \\settowidth\\jamwidth, \\sn},    
+\lstset{
+    alsoletter={\\},
+    morekeywords={\\ea, \\ex, \\exi, \\exr, \\exp, \\gll, \\glll, \\gllll, \\glt, \\ea, \\z, \\begin, \\end, \\\\, \\textsc, \\textit, \\textbf, \\SG, \\COP, \\PRS, \\IND, \\PTCP, \\F, \\jambox, \\jambox*,  \\settowidth, \\jamwidth, \\nogltOffset, \\resetgltOffset, exe, xlist, \\ex\\label, ex, :, original, ex:, firstmat, \\settowidth\\jamwidth, \\sn},
     basicstyle=\fontfamily{pcr}\selectfont\footnotesize\color{black},
     keywordstyle=\color{blue}\bfseries, % style for keywords
     commentstyle=\color{green}\bfseries, % style for keywords
     numbers=none, % where to put the line-numbers
-    numberstyle=\tiny, % the size of the fonts that are used for the line-numbers     
+    numberstyle=\tiny, % the size of the fonts that are used for the line-numbers
     backgroundcolor=\color{lightgray},
     showspaces=false, % show spaces adding particular underscores
     showstringspaces=false, % underline spaces within strings
@@ -29,14 +29,14 @@
     rulecolor=\color{black},
     captionpos=b, % sets the caption-position to bottom
     breaklines=true, % sets automatic line breaking
-    breakatwhitespace=false 
+    breakatwhitespace=false
 }
 
 \newcommand{\cmd}[1]{\texttt{\textbackslash#1}}
 \newcommand{\env}[1]{\texttt{#1}}
 \begin{document}
   \maketitle
-  
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%      File: langsci-cgloss.sty
 %%    Author: Language Science Press (http://langsci-press.org)
@@ -108,66 +108,66 @@
 %
 % Layout is critical between \gll (or \glll) and \glt (or \gln).
 %
-% Thanks to Marcel R. van der Goot for permission to reproduce code.  
+% Thanks to Marcel R. van der Goot for permission to reproduce code.
 
 \lehead{langsci-gb4e}
 \rohead{langsci-gb4e}
 \section{Introduction}
-This document describes the \texttt{langsci-gb4e} package for typesetting linguistic examples. It builds upon the popular \texttt{gb4e}  and \texttt{cgloss} (by Hans-Peter Kolb, Craig Thiersch, improved by Alexis Dimitriadis) packages. It also includes the package \texttt{jambox} by Alexis Dimitriadis. 
+This document describes the \texttt{langsci-gb4e} package for typesetting linguistic examples. It builds upon the popular \texttt{gb4e}  and \texttt{cgloss} (by Hans-Peter Kolb, Craig Thiersch, improved by Alexis Dimitriadis) packages. It also includes the package \texttt{jambox} by Alexis Dimitriadis.
 % \section{History}
 \section{Standard usage}
-This manual starts with the most common cases and describes the foundations and the more complicated cases later. 
+This manual starts with the most common cases and describes the foundations and the more complicated cases later.
 
 To produce a standard example, use \cmd{ea} before and \cmd{z} after
- 
+
 \begin{minipage}[t]{.45\textwidth}
 \begin{lstlisting}
-  \ea 
+  \ea
   The cat is on the mat.
   \z
 \end{lstlisting}
 \end{minipage}~
 \parbox[t]{.45\textwidth}{
-  \ea 
+  \ea
   The cat is on the mat.
   \z
   }
 
-\section{Judgments}  
-  To add judgments, there is a quick and dirty way and a proper way. 
+\section{Judgments}
+  To add judgments, there is a quick and dirty way and a proper way.
 
-\subsection{Quick and dirty way}  
+\subsection{Quick and dirty way}
 Simply add a \texttt{*} in front of the sentence (or any other judgment). In groups of examples, this will look bad because vertical alignment is off (\ref{ex:judg1}--\ref{ex:judg2}).
 
 \begin{minipage}[t]{.45\textwidth}
 \begin{lstlisting}
-  \ea 
+  \ea
   The cat is on the mat.
   \z
-  \ea 
+  \ea
   * The cat are on the mat.
   \z
 \end{lstlisting}
 \end{minipage}~
 \parbox[t]{.45\textwidth}{
-  \ea\label{ex:judg1} 
+  \ea\label{ex:judg1}
   The cat is on the mat.
   \z
-  \ea\label{ex:judg2} 
+  \ea\label{ex:judg2}
   * The cat are on the mat.
   \z
   }
-  
-\subsection{Proper way}  
+
+\subsection{Proper way}
 The proper way puts the judgment between \texttt{[]} and does the same for empty judgments in a group. The sentence itself is put in \texttt{\{\}}. In this way, the examples align nicely (\ref{ex:judg3}--\ref{ex:judg4}).
-  
+
 \begin{minipage}[t]{.45\textwidth}
 \begin{lstlisting}
-  \ea[]{ 
+  \ea[]{
   The cat is on the mat.
   }
-  \z 
-  \ea[*]{ 
+  \z
+  \ea[*]{
   The cat are on the mat.
   }
   \z
@@ -177,14 +177,14 @@ The proper way puts the judgment between \texttt{[]} and does the same for empty
   \ea[]{\label{ex:judg3}
   The cat is on the mat.
   }
-  \z 
+  \z
   \ea[*]{\label{ex:judg4}
   The cat are on the mat.
   }
   \z
   }
-  
- 
+
+
 \section{Lists of examples}
 If there are several examples in a row, you can use only one \cmd{z} at the very end and use \cmd{ex} instead of \cmd{ea} for examples after the first one (\ref{ex:ex:second}--\ref{ex:ex:end}).
 
@@ -206,7 +206,7 @@ If there are several examples in a row, you can use only one \cmd{z} at the very
 }
 
 \section{Subexamples}
-There are three predefined level of examples. \cmd{ea} opens a new level and prints the first identifier; \cmd{z} closes the last level. \cmd{ex} adds a further example but does not change levels. 
+There are three predefined level of examples. \cmd{ea} opens a new level and prints the first identifier; \cmd{z} closes the last level. \cmd{ex} adds a further example but does not change levels.
 
 \begin{minipage}[t]{.5\textwidth}
 \begin{lstlisting}
@@ -246,7 +246,7 @@ There are three predefined level of examples. \cmd{ea} opens a new level and pri
 }
 
 \section{The environments \texttt{exe} and \texttt{xlist}}
-The commands \cmd{ea} and \cmd{z} are shorthands for the environments \env{exe} (highest level) and \env{xlist} (subexamples and below). \cmd{ea} works like \verb+\begin{exe}\ex+ or \verb+\begin{xlist}\ex+, as the case may be. \cmd{z} works like \verb+\end{exe}+ or \verb+\end{xlist}+. In some cases, it can be necessary to resort to the environments instead of the shorthands, but this is rare. 
+The commands \cmd{ea} and \cmd{z} are shorthands for the environments \env{exe} (highest level) and \env{xlist} (subexamples and below). \cmd{ea} works like \verb+\begin{exe}\ex+ or \verb+\begin{xlist}\ex+, as the case may be. \cmd{z} works like \verb+\end{exe}+ or \verb+\end{xlist}+. In some cases, it can be necessary to resort to the environments instead of the shorthands, but this is rare.
 
 
 \begin{minipage}[t]{.5\textwidth}
@@ -261,10 +261,10 @@ The commands \cmd{ea} and \cmd{z} are shorthands for the environments \env{exe} 
     \begin{xlist}
         \ex zwei
         \ex dos
-    \end{xlist}    
+    \end{xlist}
     \ex three
     \begin{xlist}
-        \ex drei        
+        \ex drei
         \begin{xlist}
             \ex who needs all these
             \ex levels of subexamples
@@ -284,10 +284,10 @@ The commands \cmd{ea} and \cmd{z} are shorthands for the environments \env{exe} 
     \begin{xlist}
         \ex zwei
         \ex dos
-    \end{xlist}    
+    \end{xlist}
     \ex three
     \begin{xlist}
-        \ex drei        
+        \ex drei
         \begin{xlist}
             \ex who needs all these
             \ex levels of subexamples
@@ -348,19 +348,19 @@ Sometimes, examples are repeated in papers further down, but they should retain 
 \begin{minipage}[t]{.55\textwidth}
 \begin{lstlisting}
 \begin{exe}
-    \ex\label{ex:firstmat} A cat is on the mat. 
-    \ex A dog is on the mat. 
-    \ex A mouse is on the mat. 
-    \exr{ex:firstmat} A cat is on the mat. 
+    \ex\label{ex:firstmat} A cat is on the mat.
+    \ex A dog is on the mat.
+    \ex A mouse is on the mat.
+    \exr{ex:firstmat} A cat is on the mat.
 \end{exe}
  \end{lstlisting}
 \end{minipage}~
 \parbox[t]{.45\textwidth}{
 \begin{exe}
-    \ex\label{ex:firstmat} A cat is on the mat. 
-    \ex A dog is on the mat. 
-    \ex A mouse is on the mat. 
-    \exr{ex:firstmat} A cat is on the mat. 
+    \ex\label{ex:firstmat} A cat is on the mat.
+    \ex A dog is on the mat.
+    \ex A mouse is on the mat.
+    \exr{ex:firstmat} A cat is on the mat.
 \end{exe}
 }
 
@@ -374,65 +374,65 @@ Use \cmd{sn} for examples without identifiers.
 \begin{minipage}[t]{.55\textwidth}
 \begin{lstlisting}
 \begin{exe}
-    \ex A cat is on the mat. 
+    \ex A cat is on the mat.
     \sn ← This sentence no identifier
-    \ex A dog is on the mat. 
+    \ex A dog is on the mat.
 \end{exe}
  \end{lstlisting}
 \end{minipage}~
 \parbox[t]{.45\textwidth}{
 \begin{exe}
-    \ex A cat is on the mat. 
+    \ex A cat is on the mat.
     \sn ← This sentence no identifier
-    \ex A dog is on the mat. 
+    \ex A dog is on the mat.
 \end{exe}
 }
 
 \subsection{Tweaks}
-Use \cmd{exewidth}{(222)} to set the width reserved for identifiers to three-digits. 
+Use \cmd{exewidth}{(222)} to set the width reserved for identifiers to three-digits.
 
-Use \cmd{judgewidth\{??\}} to reserve space of the width of ?? for judgements. 
+Use \cmd{judgewidth\{??\}} to reserve space of the width of ?? for judgements.
 
 Example sentences with \cmd{ex} or \cmd{ea} normally do not use hyphenation. If you would like hyphenation, use \cmd{eanoraggedright}.
 
 When you have an example which happens to be the last item in a footnote, there can be excess vertical space. In these cases, use \cmd{zlast} instead of \cmd{z}. This will drop the extra vertical space.
 
- 
+
 \section{Glossing}
 \subsection{Common glossing}
-Interlinear examples are a main feature of linguistic texts. They are built as follows: 
+Interlinear examples are a main feature of linguistic texts. They are built as follows:
 
 \begin{minipage}[t]{.55\textwidth}
 \begin{lstlisting}
 \ea
 \gll carte de crédit\\
      card  of credit\\
-\glt `credit card'     
+\glt `credit card'
 \z
  \end{lstlisting}
 \end{minipage}~
-\parbox[t]{.45\textwidth}{ 
+\parbox[t]{.45\textwidth}{
 \ea
 \gll carte de crédit\\
      card  of credit\\
-\glt `credit card'     
-\z 
+\glt `credit card'
+\z
 }
 
-The important elements are \cmd{ea} and \cmd{z} to produce the example environment; \cmd{gll} to introduce the glossing environment; the \texttt{\textbackslash\textbackslash} to close the first line and the second line; and \cmd{glt} for the translation. 
+The important elements are \cmd{ea} and \cmd{z} to produce the example environment; \cmd{gll} to introduce the glossing environment; the \texttt{\textbackslash\textbackslash} to close the first line and the second line; and \cmd{glt} for the translation.
 
-The command automatically wraps the line as required. 
+The command automatically wraps the line as required.
 \begin{lstlisting}
 \ea
 \gll la carte de crédit que tu as trouvée sur la place devant la gare\\
      the card  of credit \textsc{rel} you have found on the place in.front.of the station\\
-\glt `The credit card which you found on the square in front of the station.'     
+\glt `The credit card which you found on the square in front of the station.'
 \z
  \end{lstlisting}
 \ea
 \gll la carte de crédit que tu as trouvée sur la place devant la gare\\
      the card  of credit \textsc{rel} you have found on the place in.front.of the station\\
-\glt `The credit card which you found on the square in front of the station.'     
+\glt `The credit card which you found on the square in front of the station.'
 \z
 
 
@@ -446,19 +446,19 @@ The command automatically wraps the line as required.
 \ea
 \gllll carte de crédit\\
        carta  di credito\\
-       tarjeta  de credito\\
+       tarjeta  de crédito\\
        card  of credit\\
-\glt `credit card'     
+\glt `credit card'
 \z
  \end{lstlisting}
 \end{minipage}~
-\parbox[t]{.45\textwidth}{ 
+\parbox[t]{.45\textwidth}{
 \ea
 \gllll carte de crédit\\
        carta  di credito\\
-       tarjeta  de credito\\
+       tarjeta  de crédito\\
        card  of credit\\
-\glt `credit card'     
+\glt `credit card'
 \z
 }
 
@@ -470,37 +470,37 @@ To skip words when aliging, you can use \texttt{\textasciitilde} or \texttt{\{\}
 \begin{minipage}[t]{.55\textwidth}
 \begin{lstlisting}
 \ea
-\glll carte de crédit\\ 
+\glll carte de crédit\\
       card  of credit\\
       N     ~  N\\
-\glt `credit card'     
+\glt `credit card'
 \z
 \ea
-\glll carte de crédit\\ 
+\glll carte de crédit\\
       card  of credit\\
       N    {}  N\\
-\glt `credit card'     
+\glt `credit card'
 \z
  \end{lstlisting}
 \end{minipage}~
-\parbox[t]{.45\textwidth}{ 
+\parbox[t]{.45\textwidth}{
 \ea
-\glll carte de crédit\\ 
+\glll carte de crédit\\
       card  of credit\\
       N     ~  N\\
-\glt `credit card'     
+\glt `credit card'
 \z
 \ea
-\glll carte de crédit\\ 
+\glll carte de crédit\\
       card  of credit\\
       N    {}  N\\
-\glt `credit card'     
+\glt `credit card'
 \z
 }
 
 
 \subsection{n:1 glosses}\label{sec:n1glosses}
-Sometimes there are expressions consisting of more than one word which should nevertheless be glossed by only one word. In those cases, use \texttt{\{\}} to enclose the multi-word expression. 
+Sometimes there are expressions consisting of more than one word which should nevertheless be glossed by only one word. In those cases, use \texttt{\{\}} to enclose the multi-word expression.
 
 
 \begin{minipage}[t]{.55\textwidth}
@@ -508,32 +508,32 @@ Sometimes there are expressions consisting of more than one word which should ne
 \ea
 \gll Juan murió {de repente}\\
      Juan died suddenly\\
-\glt `Juan died suddenly.'     
+\glt `Juan died suddenly.'
 \z
  \end{lstlisting}
 \end{minipage}~
-\parbox[t]{.45\textwidth}{ 
+\parbox[t]{.45\textwidth}{
 \ea
 \gll Juan murió {de repente}\\
      Juan died suddenly\\
-\glt `Juan died suddenly.'     
+\glt `Juan died suddenly.'
 \z
 }
 
 \section{Leipzig Glossing Rules}
 The Leipzig Glossing Rules provide an inventory of agreed abbreviations for linguistic categories. They can be accessed via commands in ALLCAPS, e.g. \cmd{QUOT} for {\QUOT} (quotative).
- 
+
 \begin{lstlisting}
 \ea
 \gll Je suis ven-u-e hier\\
      1\SG{} \COP.1\SG.\PRS.\IND{} come-\PTCP-\F{} yesterday\\
-\glt `I came yesterday'     
+\glt `I came yesterday'
 \z
  \end{lstlisting}
 \ea\label{ex:correctalignment}
 \gll Je suis ven-u-e hier\\
      1\SG{} \COP.1\SG.\PRS.\IND{} come-\PTCP-\F{} yesterday\\
-\glt `I came yesterday'     
+\glt `I came yesterday'
 \z
 
 The extra \texttt{\{\}} are necessary to prevent {\LaTeX} from eating the white space after the command, which is necessary to get the alignment right. Compare \REF{ex:wrongalignment} without \texttt{\{\}} to \REF{ex:correctalignment}.
@@ -542,14 +542,14 @@ The extra \texttt{\{\}} are necessary to prevent {\LaTeX} from eating the white 
 \ea
 \gll Je suis ven-u-e hier\\
      1\SG \COP.1\SG.\PRS.\IND come-\PTCP-\F yesterday\\
-\glt `I came yesterday'     
+\glt `I came yesterday'
 \z
  \end{lstlisting}
 \ea\label{ex:wrongalignment}
 \gll Je suis ven-u-e hier\\
      1\SG \COP.1\SG.\PRS.\IND come-\PTCP-\F yesterday\\
-\glt `I came yesterday'     
-\z   
+\glt `I came yesterday'
+\z
 
 If you need glosses which are not in the Leipzig Glossing Rules, you can add them with \cmd{newcommand\{}\cmd{MYCATEGORY\}\{}\cmd{textsc\{mycategory\}\}}.
 
@@ -561,27 +561,27 @@ In order to use judgments in brackets \texttt{[]}, you have to enclose the inter
 \begin{lstlisting}
 \begin{exe}
 \ex[]{
-\gll carte de crédit\\ 
-     card  of credit\\ 
-\glt `credit card'     
+\gll carte de crédit\\
+     card  of credit\\
+\glt `credit card'
 }
 \ex[*]{
-\gll carte à crédit\\ 
-     card  on credit\\  
+\gll carte à crédit\\
+     card  on credit\\
 }
 \end{exe}
  \end{lstlisting}
 \end{minipage}~
-\parbox[t]{.45\textwidth}{ 
+\parbox[t]{.45\textwidth}{
 \begin{exe}
 \ex[]{
-\gll carte de crédit\\ 
-     card  of credit\\ 
-\glt `credit card'     
+\gll carte de crédit\\
+     card  of credit\\
+\glt `credit card'
 }
 \ex[*]{
-\gll carte à crédit\\ 
-     card  on credit\\  
+\gll carte à crédit\\
+     card  on credit\\
 }
 \end{exe}
 }
@@ -590,62 +590,62 @@ In order to use judgments in brackets \texttt{[]}, you have to enclose the inter
 You can adjust the appearance of the different elements and lines in Interlinear examples with the following commands:
 \begin{itemize}
 \item  \cmd{exfont\{\textbackslash itshape\}} for the first line
-\item  \cmd{glossfont\{...\}} for the interlinear glosses 
-\item  \cmd{transfont\{...\}} for the translation 
+\item  \cmd{glossfont\{...\}} for the interlinear glosses
+\item  \cmd{transfont\{...\}} for the translation
 \item  \cmd{exnrfont\{...\}} for the numbered identifier
-\medskip 
+\medskip
 \item  \cmd{fnexfont\{...\}} for the first line of an example in a foonote
 \item  \cmd{fnglossfont\{...\}} for the interlinear glosses of an example in a foonote
 \item  \cmd{fntransfont\{...\}} for the translation of an example in a foonote
-\item  \cmd{fnexnrfont\{...\}} for the numbered identifier of an example in a foonote 
+\item  \cmd{fnexnrfont\{...\}} for the numbered identifier of an example in a foonote
 \end{itemize}
-    
+
 If you publish with Language Science Press, the right configuration for your series will automatically be loaded.
 
-You can toggle the extra vertical space between the interlinear text and the translation with \cmd{nogltOffset} and \cmd{resetgltOffset}. 
- 
+You can toggle the extra vertical space between the interlinear text and the translation with \cmd{nogltOffset} and \cmd{resetgltOffset}.
+
 \begin{lstlisting}
-\ea    
-\gll Dit is een zin.\\ 
+\ea
+\gll Dit is een zin.\\
      this is a sentence\\
 \glt `This translation has standard vertical space.'
 \z
 
 \nogltOffset
 
-\ea 
-\gll Dit is een zin.\\ 
+\ea
+\gll Dit is een zin.\\
      this is a sentence\\
 \glt `This translation has less vertical space.'
 \z
 
 \resetgltOffset
 
-\ea 
-\gll Dit is een zin.\\ 
+\ea
+\gll Dit is een zin.\\
      this is a sentence\\
 \glt `This translation has standard vertical space again.'
 \z
 \end{lstlisting}
 
-\ea    
-\gll Dit is een zin.\\ 
+\ea
+\gll Dit is een zin.\\
      this is a sentence\\
 \glt `This translation has standard vertical space.'
 \z
 
 \nogltOffset
 
-\ea 
-\gll Dit is een zin.\\ 
+\ea
+\gll Dit is een zin.\\
      this is a sentence\\
 \glt `This translation has less vertical space.'
 \z
 
 \resetgltOffset
 
-\ea 
-\gll Dit is een zin.\\ 
+\ea
+\gll Dit is een zin.\\
      this is a sentence\\
 \glt `This translation has standard vertical space again.'
 \z
@@ -662,34 +662,34 @@ To add annotations to examples, use \cmd{jambox}.
 \begin{exe}
 \ex John loves dogs.\jambox{(mammals)}
 \ex John loves eagles.\jambox{(birds)}
-\ex John loves turtles.\jambox{(amphibians)}   
+\ex John loves turtles.\jambox{(amphibians)}
 \end{exe}
  \end{lstlisting}
- 
+
 \begin{exe}
 \ex John loves dogs.\jambox{(mammals)}
 \ex John loves eagles.\jambox{(birds)}
-\ex John loves turtles.\jambox{(amphibians)}   
-\end{exe}  
+\ex John loves turtles.\jambox{(amphibians)}
+\end{exe}
 
 
 
 To maximize horizontal distance, use \cmd{jambox*}, but then you lose left-alignment.
 
-\begin{lstlisting} 
+\begin{lstlisting}
 \begin{exe}
 \ex John loves dogs.\jambox*{(mammals)}
 \ex John loves eagles.\jambox*{(birds)}
-\ex John loves turtles.\jambox*{(amphibians)}   
+\ex John loves turtles.\jambox*{(amphibians)}
 \end{exe}
  \end{lstlisting}
- 
+
 \begin{exe}
 \settowidth\jamwidth{(amphibians)}
 \ex John loves dogs\jambox*{(mammals)}
 \ex John loves eagles\jambox*{(birds)}
-\ex John loves turtles\jambox*{(amphibians)}   
-\end{exe}  
+\ex John loves turtles\jambox*{(amphibians)}
+\end{exe}
 
 
 You can control the distance from the right margins via \cmd{jamwidth}
@@ -699,23 +699,23 @@ You can control the distance from the right margins via \cmd{jamwidth}
 \begin{exe}
 \ex John loves dogs.\jambox{(mammals)}
 \ex John loves eagles.\jambox{(birds)}
-\ex John loves turtles.\jambox{(amphibians)}   
+\ex John loves turtles.\jambox{(amphibians)}
 \end{exe}
  \end{lstlisting}
- 
+
 \begin{exe}
 \settowidth\jamwidth{(amphibians)}
 \ex John loves dogs.\jambox{(mammals)}
 \ex John loves eagles.\jambox{(birds)}
-\ex John loves turtles.\jambox{(amphibians)}   
-\end{exe}  
+\ex John loves turtles.\jambox{(amphibians)}
+\end{exe}
 
 
-\subsection{Jambox and interlinear examples} 
-Jambox only works with interlinear examples if the aligned lines are enclosed in \texttt{\{\}}. 
+\subsection{Jambox and interlinear examples}
+Jambox only works with interlinear examples if the aligned lines are enclosed in \texttt{\{\}}.
 
 \begin{lstlisting}
-\begin{exe} 
+\begin{exe}
 \ex{
 \gll carte de crédit\\
      card of credit \\}\jambox{(French)}
@@ -725,10 +725,10 @@ Jambox only works with interlinear examples if the aligned lines are enclosed in
 \gll Kredit-karte\\
      credit-card \\}\jambox{(German)}
 \glt `credit card'
-\end{exe} 
+\end{exe}
  \end{lstlisting}
- 
-\begin{exe} 
+
+\begin{exe}
 \ex{
 \gll carte de crédit\\
      card of credit \\}\jambox{(French)}
@@ -738,7 +738,7 @@ Jambox only works with interlinear examples if the aligned lines are enclosed in
 \gll Kredit-karte\\
      credit-card \\}\jambox{(German)}
 \glt `credit card'
-\end{exe} 
+\end{exe}
 
 
 
@@ -746,12 +746,12 @@ Jambox only works with interlinear examples if the aligned lines are enclosed in
 \section{What's removed}
 The original \texttt{gb4e} files had additional macros for adding bars on letters for early generative grammar, for arrows, and for greek letters. These solutions have become obsolete with the advent of Unicode and TikZ. These legacy commands are therefore removed from \texttt{langsci-gb4e}.
 
-% Some versions of gb4e used the counter \texttt{equation} to be able to mix math formulae and lingustic examples, using the same numbering system for both. This is considered bad practice since you cannot be sure that the layout of these two environments will correspond. You might end up with example "(17)" followed by formula "3.18". This is maximally confusing and very difficult to debug once you run into it. If you want your math formulae with the same counters as linguistic examples, simply use \cmd{ea}...\cmd{z} around them. 
+% Some versions of gb4e used the counter \texttt{equation} to be able to mix math formulae and lingustic examples, using the same numbering system for both. This is considered bad practice since you cannot be sure that the layout of these two environments will correspond. You might end up with example "(17)" followed by formula "3.18". This is maximally confusing and very difficult to debug once you run into it. If you want your math formulae with the same counters as linguistic examples, simply use \cmd{ea}...\cmd{z} around them.
 
 \section{Gotchas}
 \begin{enumerate}
-\item Make sure to never end an item to be glossed with a command like \cmd{textschwa} or \cmd{PASS}. This will eat up the space separating this word from the next one and will glue them together (cf. \REF{ex:wrongalignment}). 
+\item Make sure to never end an item to be glossed with a command like \cmd{textschwa} or \cmd{PASS}. This will eat up the space separating this word from the next one and will glue them together (cf. \REF{ex:wrongalignment}).
 \item When highlighting aligned words with \cmd{textit} or \cmd{textbf}, do so individually (\verb+My words \textit{are} \textit{highlighted}+). Do not use \verb+My words+ \verb+\textit{are highlighted}+ as this will lead to \textit{are highlighted} being treated as a mulitword expression for purposes of alignment (see §\ref{sec:n1glosses}).
 \end{enumerate}
- 
+
 \end{document}
